# novel-crawler-api

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  initialize_project.sh  pyproject.toml
app/: main.py  test.py
app/api/v1/routers/: novel.py
app/core/: config.py  novel_downloader.py  spa.py
app/schemas/: novel.py
frontend/: bun.lockb  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: add-novel-dialog.tsx  nav-bar.tsx  novel-input.tsx  novel-list.tsx  theme-toggle.tsx
frontend/src/components/add-novel-dialog/: index.tsx  use-values.ts
frontend/src/hooks/: use-action.ts  use-dexie-query.ts  use-novel-table.ts
frontend/src/lib/: dexie.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/store/: use-add-novel-dialog.tsx
frontend/src/types/: request-types.ts  response-types.ts
