[project]
name = "novel-crawler-api"
version = "0.1.0"
description = "API for downloading light novels"
readme = "README.md"
requires-python = ">=3.11"
authors = [{"email"= "atotoffah@gmail.com", "name"="Ato Toffah"}]
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.115.8",
    "lightnovel-crawler>=3.7.5",
    "pydantic-settings>=2.7.1",
]
